<resources>
    <string name="app_name">Bibliothéque Marguerite Bourgeoys</string>


    <string name="settings">Settings</string>
    <string name="Compte">Compte</string>
    <string name="Historique">Historique</string>
    <string name="Rendez_Vous">Rendez-Vous</string>
    <string name="Settings">action_settings</string>
    <string name="Apropos">apropos</string>

    <string name="biblioth_que_marguerite_bourgeoys">Bibliothéque Marguerite Bourgeoys</string>
    <string name="utilisateur">utilisateur</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="retour_a_la_page_login">Retour a la page Login</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="modiffier_r_initialiser_mot_de_passe">Modiffier/Réinitialiser Mot de passe</string>
    <string name="mot_de_pass">Mot de Passe</string>
    <string name="id_utilisateur">ID utilisateur</string>
    <string name="action_Compte">action_Compte</string>
    <string name="action_Historique">action_Historique</string>
    <string name="action_Rendez_Vous">action_Rendez-Vous</string>
    <string name="action_Apropos">action_Apropos</string>
    <string name="apropos">Apropos</string>
    <string name="search_hint">search_hint</string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_tag_prefix">Android DateTimePickerDialog </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_compte">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
