<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

<!--app: showAsAction = "collapseActionView | ifRoom" s'affiche lorsqu'il y a de la place disponible-->
    <item
    android:id="@+id/search"
    android:title="@string/app_name"
    android:hint="@string/search_hint"
    android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
    app:showAsAction="collapseActionView|ifRoom"
    app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_historique"
        android:title="@string/Historique"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rendezVous"
        android:title="@string/Rendez_Vous"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_apropos"
        android:title="@string/apropos"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
