<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/biblioth_que_marguerite_bourgeoys"
            android:layout_gravity="center_horizontal" />

        <!-- identification de  l'utilisateur -->
        <!-- design widget sert a styliser la barre d'etat supérieur -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
            android:id="@+id/input_id_utilisateur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/id_utilisateur" />
        </android.support.design.widget.TextInputLayout>

        <!-- Mot de passe -->
        <!-- design widget sert a styliser la barre d'etat supérieur -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/mot_de_passe"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Confirmation de Mot de passe  -->
        <!-- design widget sert a styliser la barre d'etat supérieur -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
            android:id="@+id/input_reEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmer_mot_de_passe"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Button Enregistrer -->
        <!-- design widget sert a styliser la barre d'etat supérieur -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/enregistrer"/>

            <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/retour_a_la_page_login"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>